fix: Readjust quotes main button (prevent overflow)

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
 }
 
 .marianoButton {
+  margin-top: 10px;
   animation: heartbeat 5s infinite;
 }
 
